--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
 body {
-    background-color: aqua;
+    background-color: black;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 };
+
